dnl Process this file with autoconf to produce a configure script.
AC_INIT
AC_CONFIG_SRCDIR([src/pxparse.c])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(pxtools,0.0.20)

AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN
AC_STRUCT_TM

ALL_LINGUAS="de"
AM_GNU_GETTEXT

if test "x$USE_INCLUDED_LIBINTL" = "xyes"; then
        INTLINC='-I$(top_srcdir)/intl'
fi
AC_SUBST(INTLINC)
AC_SUBST(INTLLIBS)

AC_ARG_ENABLE(y2k,
  [  --enable-y2k            enables a Y2k workaround for paradox < 7.0],
  [case "${enableval}" in
	yes) y2k=true;;
	no) y2k=false;;
	*) AC_MSG_ERROR(bad value ${enableval} for --enable-y2k) ;;
esac],
[y2k=false]
)

if test x$y2k = xtrue ; then
	AC_DEFINE(Y2K_WORKAROUND)
fi

AC_CHECK_HEADER(getopt.h, HAVE_GETOPT=true, HAVE_GETOPT=false)
if test "x$HAVE_GETOPT" = "xtrue"; then
        AC_CHECK_LIB(c, getopt_long, HAVE_GETOPT=true, HAVE_GETOPT=false)
	if test "x$HAVE_GETOPT" = "xtrue"; then
	        AC_DEFINE(HAVE_GETOPT_LONG)
	fi
	AC_DEFINE(HAVE_GETOPT_H)
fi

localedir='${datadir}/locale'
AC_SUBST(localedir)

dnl Checks for library functions.

AC_CONFIG_FILES([
	src/Makefile 
	doc/Makefile 
	po/Makefile.in
	Makefile 
	pxtools.spec
	])
AC_OUTPUT
